<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_loc_name"
        android:text="@string/add_loc_name"
        android:layout_alignBottom="@+id/edit_loc_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/edit_loc_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_loc_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/add_loc_name"
        android:gravity="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_loc_address"
        android:text="@string/add_loc_address"
        android:layout_alignBottom="@+id/edit_loc_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/edit_loc_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_loc_address"
        android:layout_below="@+id/edit_loc_name"
        android:layout_toRightOf="@+id/add_loc_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"/>

    <EditText android:id="@+id/edit_loc_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_loc_city"
        android:layout_below="@+id/edit_loc_address"
        android:layout_toRightOf="@+id/add_loc_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_beer_bool"
        android:text="@string/add_beer_bool"
        android:layout_below="@+id/edit_loc_city"
        android:paddingLeft="45dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_wine_bool"
        android:text="@string/add_wine_bool"
        android:layout_below="@+id/edit_loc_city"
        android:layout_toRightOf="@id/add_beer_bool"
        android:layout_toEndOf="@id/add_beer_bool"
        android:paddingLeft="75dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_liq_bool"
        android:text="@string/add_liq_bool"
        android:layout_below="@+id/edit_loc_city"
        android:layout_toRightOf="@id/add_wine_bool"
        android:layout_toEndOf="@id/add_wine_bool"
        android:paddingLeft="75dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beer_radio_but"
        android:layout_below="@+id/add_beer_bool"
        android:layout_toLeftOf="@+id/add_wine_bool"
        android:layout_toStartOf="@+id/add_wine_bool" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wine_radio_but"
        android:layout_below="@id/add_wine_bool"
        android:layout_toLeftOf="@id/add_liq_bool"
        android:layout_toStartOf="@id/add_liq_bool" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liq_radio_but"
        android:layout_below="@+id/add_liq_bool"
        android:layout_alignRight="@id/add_liq_bool"
        android:layout_alignEnd="@id/add_liq_bool" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_alc_size"
        android:text="@string/add_alc_size"
        android:layout_alignBottom="@+id/edit_alc_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_alc_size"
        android:hint="@string/edit_alc_size"
        android:layout_toRightOf="@id/add_alc_size"
        android:layout_below="@id/wine_radio_but"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_alc_qty"
        android:text="@string/add_alc_qty"
        android:layout_alignBottom="@+id/edit_alc_qty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/edit_alc_qty"
        android:hint="@string/edit_alc_qty"
        android:layout_below="@+id/edit_alc_size"
        android:layout_toEndOf="@+id/add_alc_qty"
        android:gravity="end"
        android:layout_toRightOf="@+id/add_alc_qty" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_drink"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
